style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Segoe UI", Tahoma, Verdana, "sans-serif";
}

/*  HEADER  */
nav {
  background-color: transparent;
  width: 100%;
  color: white;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 50px;
  margin-left: 70px;
}

/* mobile navigation  */

.mobile__nav {
  display: none;
  min-height: 25px;
}

.mobile__nav span {
  display: none;
  /* margin-bottom: 6px; */
  border-radius: 3px;
  width: 33px;
  height: 2px;
  background-color: white;
}

/* .mobile__nav span:first-child {
  top: 0;
} */

/*                  */
.nav-links {
  display: flex;
  list-style: none;
  font-size: 20px;
  margin-right: 105px;
}

.nav-item a {
  display: inline-block;
  text-decoration: none;
  font-weight: 600;
  font-style: italic;
  color: white;
  padding: 33px;
  transition: color 0.3s, underline 0.3s;
}

.nav-item:hover a {
  color: black;
  text-decoration: underline orange;
}

.last__bar,
.bar {
  width: 90%;
  margin: 0 auto;
  height: 2px;
  background-color: #111111;
}

header {
  background: green url("img/main.jpg") no-repeat 0px -250px;
  min-height: 100vh;
  position: relative;
}

.section__header {
  position: absolute;
  top: 245px;
  left: 70px;
  width: 550px;
  padding: 50px 40px;
  color: white;
  background-color: rgba(0, 0, 0, 0.45);
}

.h2__header {
  font-size: 70px;
  font-weight: normal;
}

.p__header {
  font-size: 40px;
}

.icons {
  position: absolute;
  display: flex;
  bottom: 30px;
  right: 90px;
  width: 400px;
  height: 100px;
  align-items: center;
  justify-content: center;
}

.icons .fab,
.icons .fas {
  display: flex;
  color: white;
  font-size: 50px;
  width: 80px;
  height: 80px;
  align-items: center;
  justify-content: center;
  transition: color 0.3s;
}

.icons .fab:hover,
.icons .fas:hover {
  color: orange;
}

/*        MAIN              */
/*            Section about me        */

.section__aboutme {
  display: flex;
  align-items: center;
  justify-content: center;
}

.aboutme {
  width: 550px;
  min-height: 600px;
  margin: 80px 150px 0 80px;
  border: 5px solid black;
  background-color: white;
  color: black;
  transition: color 1.7;
}

.aboutme:hover {
  /* background: linear-gradient(to top, #273912, #6BA802); */
  /* background-color: #273912; */
  color: grey;
}

.aboutme h3 {
  font-size: 40px;
  text-align: center;
  padding: 65px 170px;
}

.aboutme p {
  font-size: 25px;
  text-align: center;
  padding: 20px 40px;
}

.profile__photo {
  height: 600px;
  margin: 80px 100px 0 150px;
}

/* Section Skills */

.section__skills {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 80px;
  background: url(img/skills.jpg) no-repeat center;
  min-height: 100vh;
  padding: 40px;
}

.skills__left,
.skills__right {
  display: flex;
  flex-direction: column;
  flex-basis: 400px;
  justify-content: center;
  align-items: center;
  min-height: 80vh;
}

.skill__item {
  font-size: 180px;
  color: white;
}

.skills__header {
  background-color: rgba(0, 0, 0, 0.45);
  height: 150px;
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.h2__portfolio,
.skills__h2 {
  color: white;
  font-size: 70px;
  font-weight: normal;
}

/*Portfolio*/

.portfolio__header {
  margin: 80px 0;
  background: url(img/portfolio.jpg) no-repeat center;
  background-size: cover;
  height: 240px;
  text-align: center;
  line-height: 240px;
}

.first__project {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  height: 420px;
  padding: 40px 0;
}

.second__project {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap-reverse;
  align-items: center;
  justify-content: center;
  height: 420px;
  padding: 40px 0;
}

.h3__portfolio {
  color: black;
  font-size: 50px;
  font-weight: normal;
}

.button__portfolio {
  display: block;
  width: 300px;
  height: 100px;
  background-color: #d1821e;
  border: 5px solid black;
  border-radius: 3em;
  font-size: 40px;
  color: white;
}

.img__portfolio {
  width: 500px;
  border: 5px solid black;
}

/* Section - Contact*/
section.section__contact {
  margin-top: 880px;
}

div.contact__header {
  position: relative;
  height: 450px;
  margin: 80px 0;
  background: url(img/contact.jpg) no-repeat 0 -335px;
}

h2.h2__contact {
  position: absolute;
  top: 35%;
  right: 20%;
  color: white;
  font-size: 70px;
  font-weight: normal;
}

.contact {
  display: flex;

  padding: 70px;
}

.contact__icons i {
  font-size: 80px;
  color: #222;
  transition: color 0.2s;
}

.contact__icons a {
  display: flex;
  align-items: center;
  text-decoration: none;
}

.contact__icons .fab,
.fas {
  color: #222;
  transform: scale(1);
  transition: transform 0.2s, color 0.2s;
}

.h3__contact {
  flex-grow: 1;
  font-size: 40px;
  font-weight: normal;
  color: #222;
  margin: 0 30px;
  text-align: center;
  transition: color 0.2s, font-weight 0.2s;
}

.contact__icons .fab:hover,
.fas:hover {
  color: orange;
  transform: scale(1.1);
}

.h3__contact:hover {
  color: black;
  font-weight: 500;
}

div.info {
  padding: 30px;
  text-align: center;
  font-size: 24px;
}

/* Footer */

.main__footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 60vh;
  background-color: #222;
}

.h2__footer {
  font-size: 70px;
  text-align: center;
  color: #a4a4a4;
}

.footer__icons {
  margin: 50px 0 80px 0;
}

.footer__icons .fab,
.footer__icons .fas {
  color: #d1821e;
  font-size: 50px;
  width: 80px;
  height: 80px;
  align-items: center;
  justify-content: center;
  transition: color 0.3s;
}

.footer__icons .fab:hover,
.footer__icons .fas:hover {
  color: white;
}

.last__bar {
  background-color: #a4a4a4;
}

.footer__bottom {
  min-width: 80%;
  display: flex;
  justify-content: space-between;
}

.footer__h4 {
  margin-top: 20px;
  color: white;
}

/*    MOBILE   */

@media (max-width: 600px) {
  /*    HEADER     */

  header {
    background: green url("img/main.jpg") no-repeat -750px -180px;
    overflow: hidden;
  }

  .nav-links {
    display: none;
  }

  .logo {
    font-size: 30px;
    margin: 30px 0 0 45px;
    font-weight: normal;
  }

  .mobile__nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    position: relative;
    cursor: pointer;
    margin: 35px 20px 0 0;
  }

  .mobile__nav span {
    display: block;
    width: 33px;
    height: 3px;
    color: white;
    cursor: pointer;
  }

  div.bar {
    display: none;
  }

  .section__header {
    top: 150px;
    left: 0;
    background-color: transparent;
  }

  .h2__header {
    font-size: 50px;
  }

  .p__header {
    font-size: 25px;
  }

  .icons {
    margin: 0 auto;
    bottom: 60px;
    width: 300px;
    height: 50px;
    justify-content: space-between;
  }

  .icons .fab,
  .icons .fas {
    font-size: 40px;
    width: 50px;
    height: 50px;
  }

  /*  about me   */

  .section__aboutme {
    flex-direction: column-reverse;
  }

  .profile__photo {
    height: 390px;
    margin: 40px auto;
  }

  .aboutme {
    width: 80%;
    min-height: 350px;
    margin: 30px auto;
    border: 3px solid black;
  }

  .aboutme h3 {
    font-size: 25px;
    padding: 45px 60px 35px 60px;
  }

  .aboutme p {
    font-size: 12px;
    padding: 10px 20px;
  }

  /* skills */

  .section__skills {
    background-size: cover;
    min-height: 100%;
    width: 100%;
    padding: 10px;
  }

  .skills__header {
    width: 175px;
    height: 75px;
    z-index: 1;
  }

  .skills__h2 {
    font-size: 40px;
  }

  .skill__item {
    font-size: 50px;
  }

  .skills__left,
  .skills__right {
    /* display: none; */
    min-height: 80%;
    flex-basis: 100px;
  }

  /* portfolio   */

  .portfolio__header {
    margin: 40px 0;
    height: 150px;
    line-height: 150px;
  }

  .h2__portfolio {
    font-size: 40px;
  }

  .second__project,
  .first__project {
    flex-direction: row;
    flex-wrap: wrap;
    align-items: stretch;
    align-content: stretch;
    flex-flow: row wrap;
  }



  .h3__portfolio {
    font-size: 25px;
    order: 1;
    flex-shrink: 1;
  }

  .img__portfolio {
    width: 260px;
    order: 2;
    flex-shrink: 1;
  }

  .button__portfolio {
    width: 222px;
    height: 74px;
    font-size: 29px;
    order: 3;
    margin-top: 15px;
    flex-shrink: 1;
  }



  /*Contact*/

  section.section__contact {
    margin-top: 900px;
  }

  div.contact__header {
    margin: 0;
    background: url(img/contact.jpg) no-repeat 0 -50px;
    background-size: cover;
    height: 175px;
  }

  h2.h2__contact {
    top: 32%;
    right: 10%;
    font-size: 40px;
  }

  .h3__contact {
    display: none;
  }

  .contact {
    flex-direction: row;
  }


  .contact__icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  .contact__icons a {
    flex-basis: 50%;
    justify-content: center;
    align-items: center;
  }

  .contact__icons i {
    font-size: 110px;
    padding: 15px;
  }

  div.info {
    display: none;
  }


  /* Footer  */

  .h2__footer {
    font-size: 40px;
  }

  .footer__icons {
    margin: 25px 0 40px 0;
  }

  .footer__icons .fab,
  .footer__icons .fas {
    font-size: 30px;
    width: 50px;
    height: 50px;
  }

  .footer__bottom {
    flex-direction: column;
  }

  .footer__h4 {
    margin-top: 5px;
    font-size: 12px;
    ;


  }

